# robotic_arm_v3

./: README.md  hardware_node.ino  ros_controller.ino
arduino_code/: arduino_code.ino
arm_config/: CMakeLists.txt  package.xml
arm_config/config/: arm_mesh.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
arm_config/launch/: arm_mesh_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  (+9 more)
arm_mesh_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_meshed_ikfast_arm_plugin/: CMakeLists.txt  arm_mesh_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
config/: joints.yaml
gazebo_elements/: CMakeLists.txt  package.xml
launch/: arm_config.rviz  spawn_gazebo.launch
meshes/: link2.stl  link3.stl  link4.stl
moveit_config_arm_mesh/: .setup_assistant  CMakeLists.txt  package.xml
my_grasping/: CMakeLists.txt  package.xml
robotic_arm_pkg/: CMakeLists.txt  package.xml
robotic_arm_pkg/config/: controllers.yaml  joint_controls.yaml  joint_state_controls.yaml  joints.yaml  trajectory_control.yaml
robotic_arm_pkg/include/robotic_arm_pkg/: robot_hardware_interface.h
robotic_arm_pkg/launch/: arm_bringup.launch  arm_config.rviz  arm_joint_controls.launch  arm_states.launch  check_motor_controls.launch  default.rviz  robotic_arm_bringup_gazebo.launch  robotic_arm_gazebo_states.launch  robotic_arm_trajectory_controller.launch  robotic_arm_world.launch  rvizlaunch.launch  spawn_gazebo.launch
robotic_arm_pkg/meshes/: base.stl  gripper_base.stl  gripper_claw_L.stl  gripper_claw_R.stl  link1.stl  link2.stl  link3.stl  link3bot.stl  link3top.stl  link4.stl  link5.stl
robotic_arm_pkg/og_meshes/: gripper_base.stl
robotic_arm_pkg/src/: robot_hardware_interface_node.cpp
robotic_arm_pkg/srv/: robot_hardware_interface_node.cpp
robotic_arm_pkg/urdf/: arm_meshed.dae  arm_meshed.urdf  arm_meshed_without_trans.urdf  ikfast61_arm.cpp
robotic_arm_pkg/urdf/original_urdf/: arm_meshed.urdf  wrapper.xml
urdf/: arm_meshed.urdf
(+61 files in other folders)
